force-app/main/default/objects/Opportunity/fields/MP_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>MP_Autonumber__c</fullName>
    <label>Autonumber</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>