force-app/main/default/objects/Opportunity/fields/MPADMContractsAreaApproval__c.field-meta.xml
<CustomField>
    <fullName>MPADMContractsAreaApproval__c</fullName>
    <label>Aprobación Area ADM Contratos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>