force-app/main/default/objects/Opportunity/fields/MPAllowStageChange__c.field-meta.xml
<CustomField>
    <fullName>MPAllowStageChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag creado para que se pueda actualizar el estado de la oportunidad a &apos;Preparacion de contrato&apos; mediante el flujo MP_Change_Opp_Stage</description>
    <label>MP Allow Stage Change</label>
    <type>Checkbox</type>
</CustomField>