force-app/main/default/objects/Opportunity/fields/MPAprobacionAreaComercial__c.field-meta.xml
<CustomField>
    <fullName>MPAprobacionAreaComercial__c</fullName>
    <label>Aprobacion Area Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>