force-app/main/default/objects/Opportunity/fields/MPAttachedTechnicalSheet__c.field-meta.xml
<CustomField>
    <fullName>MPAttachedTechnicalSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ficha Técnica Adjunta?</label>
    <type>Checkbox</type>
</CustomField>