force-app/main/default/objects/Opportunity/fields/MPCheckApprovalComments__c.field-meta.xml
<CustomField>
    <fullName>MPCheckApprovalComments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera que se usa para validar que al rechazar una solicitud de aprobacion, comentarios deben ser agregados para finalizar el rechazo</description>
    <label>Validar comentarios de rechazo</label>
    <type>Checkbox</type>
</CustomField>