force-app/main/default/objects/Opportunity/fields/MPCommercialApprover__c.field-meta.xml
<CustomField>
    <fullName>MPCommercialApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>