force-app/main/default/objects/Opportunity/fields/MPCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>MPCompletionDate__c</fullName>
    <label>Fecha de finalización de obra</label>
    <type>Date</type>
</CustomField>