force-app/main/default/objects/Opportunity/fields/MPConstructionDaysOff__c.field-meta.xml
<CustomField>
    <fullName>MPConstructionDaysOff__c</fullName>
    <label>Días libres de construcción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>