force-app/main/default/objects/Opportunity/fields/MPContractDate__c.field-meta.xml
<CustomField>
    <fullName>MPContractDate__c</fullName>
    <label>Fecha de contrato</label>
    <type>Date</type>
</CustomField>