force-app/main/default/objects/Opportunity/fields/MPContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>MPContractEndDate__c</fullName>
    <inlineHelpText>La fecha de fin del contrato se calcula según el tipo de registro de la oportunidad:
Nuevo Ingreso: Se calcula sumando el plazo al inicio del contrato en meses o años, según el tipo de plazo.
Modificación/Renovación: La fecha se obtiene directamente de la integración &quot;Obtener Contrato 4.1&quot; al momento de crear la oportunidad.</inlineHelpText>
    <label>Fecha final del contrato</label>
    <type>Date</type>
</CustomField>