force-app/main/default/objects/Opportunity/fields/MPContractPeriodYears__c.field-meta.xml
<CustomField>
    <fullName>MPContractPeriodYears__c</fullName>
    <label>Plazo de contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>