force-app/main/default/objects/Opportunity/fields/MPContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>MPContractStartDate__c</fullName>
    <description>Oportunidad Nuevo Ingreso: Fecha en la que el contrato se firma
Oportunidad Mod/Renov: Fecha de creación de la oportunidad Mod/Renov</description>
    <inlineHelpText>Fecha en la que el contrato se firma</inlineHelpText>
    <label>Fecha de inicio del contrato</label>
    <type>Date</type>
</CustomField>