force-app/main/default/objects/Opportunity/fields/MPContractTerm__c.field-meta.xml
<CustomField>
    <fullName>MPContractTerm__c</fullName>
    <formula>((YEAR(MPContractEndDate__c) - YEAR(MPContractStartDate__c))*12) + (MONTH(MPContractEndDate__c) - MONTH(MPContractStartDate__c))</formula>
    <label>Duración del Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>