force-app/main/default/objects/Opportunity/fields/MPContractType__c.field-meta.xml
<CustomField>
    <fullName>MPContractType__c</fullName>
    <label>Tipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrendamiento</fullName>
            </value>
            <value>
                <fullName>Subarrrendamiento</fullName>
            </value>
            <value>
                <fullName>Usufructo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>