force-app/main/default/objects/Opportunity/fields/MPContractWarranty__c.field-meta.xml
<CustomField>
    <fullName>MPContractWarranty__c</fullName>
    <label>Garantia Contratado (SAP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>