force-app/main/default/objects/Opportunity/fields/MPCorporateComplianceStandards__c.field-meta.xml
<CustomField>
    <fullName>MPCorporateComplianceStandards__c</fullName>
    <label>Normas de Compliance Corporativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>