force-app/main/default/objects/Opportunity/fields/MPDateOfApprovalOfRiskArea__c.field-meta.xml
<CustomField>
    <fullName>MPDateOfApprovalOfRiskArea__c</fullName>
    <label>Fecha Aprobacion Area de Riesgos</label>
    <type>Date</type>
</CustomField>