force-app/main/default/objects/Opportunity/fields/MPDebtClassification__c.field-meta.xml
<CustomField>
    <fullName>MPDebtClassification__c</fullName>
    <description>Clasificación de la deuda de la cuenta relacionada a la oportunidad, al momento de entrar en el proceso Aprobación de riesgo cuenta relacionada.</description>
    <label>Clasificación de deuda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>