force-app/main/default/objects/Opportunity/fields/MPFlexibleClauses1__c.field-meta.xml
<CustomField>
    <fullName>MPFlexibleClauses1__c</fullName>
    <label>Cláusula Flex. 1: Núm. de Rentas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPFlexibleClauses1</valueSetName>
    </valueSet>
</CustomField>