force-app/main/default/objects/Opportunity/fields/MPFootage__c.field-meta.xml
<CustomField>
    <fullName>MPFootage__c</fullName>
    <formula>SyncedQuote.MPStore__r.MPFootage__c</formula>
    <label>Metraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>