force-app/main/default/objects/Opportunity/fields/MPGetContract41API__c.field-meta.xml
<CustomField>
    <fullName>MPGetContract41API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integración Get Contract 4.1</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>