force-app/main/default/objects/Opportunity/fields/MPGuaranteePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>MPGuaranteePaymentMethod__c</fullName>
    <label>Método de Pago Garantía</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Boleta_de_garantía</fullName>
                <label>Boleta de garantía</label>
            </value>
            <value>
                <fullName>Póliza</fullName>
            </value>
            <value>
                <fullName>Carta_fianza</fullName>
                <label>Carta fianza</label>
            </value>
            <value>
                <fullName>Depósito_bancario</fullName>
                <label>Depósito bancario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>