force-app/main/default/objects/Opportunity/fields/MPInternalRegulation__c.field-meta.xml
<CustomField>
    <fullName>MPInternalRegulation__c</fullName>
    <label>Reglamento Interno Mallplaza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>