force-app/main/default/objects/Opportunity/fields/MPLandAndConstructionPlans__c.field-meta.xml
<CustomField>
    <fullName>MPLandAndConstructionPlans__c</fullName>
    <label>Planos del Terreno y Construcciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>