force-app/main/default/objects/Opportunity/fields/MPLeaseCommencementAgreement__c.field-meta.xml
<CustomField>
    <fullName>MPLeaseCommencementAgreement__c</fullName>
    <label>Acuerdo de inicio de renta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEND</fullName>
            </value>
            <value>
                <fullName>A partir de la fecha de entrega de local acordada para habilitación.</fullName>
            </value>
            <value>
                <fullName>A partir de la apertura del Centro Comercial.</fullName>
            </value>
            <value>
                <fullName>30 días después fecha acordada entrega de local para habilitación. (Pre Apertura)</fullName>
            </value>
            <value>
                <fullName>60 días después fecha acordada entrega de local para habilitación. (Pre Apertura)</fullName>
            </value>
            <value>
                <fullName>90 días después fecha acordada entrega de local para habilitación. (Pre Apertura)</fullName>
            </value>
            <value>
                <fullName>30 días después de la fecha acordada de entrega de local para habilitación.</fullName>
            </value>
            <value>
                <fullName>60 días después de la fecha acordada de entrega de local para habilitación.</fullName>
            </value>
            <value>
                <fullName>90 días después de la fecha acordada de entrega de local para habilitación.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>