force-app/main/default/objects/Opportunity/fields/MPLeasingGuidelines__c.field-meta.xml
<CustomField>
    <fullName>MPLeasingGuidelines__c</fullName>
    <inlineHelpText>Normas generales de arrendamiento para los centros comerciales Mallplaza</inlineHelpText>
    <label>Normas Arrendamiento Mallplaza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>