force-app/main/default/objects/Opportunity/fields/MPLocalDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>MPLocalDeliveryDate__c</fullName>
    <label>Fecha entrega local</label>
    <type>Date</type>
</CustomField>