force-app/main/default/objects/Opportunity/fields/MPLossReason__c.field-meta.xml
<CustomField>
    <fullName>MPLossReason__c</fullName>
    <label>Motivo de Pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente_No_aceptó_precotización</fullName>
                <label>Cliente No aceptó precotización</label>
            </value>
            <value>
                <fullName>No_cumple_con_el_layout_de_local</fullName>
                <label>No cumple con el layout de local</label>
            </value>
            <value>
                <fullName>Contrapropuesta_cliente_es_inviable</fullName>
                <label>Contrapropuesta cliente es inviable</label>
            </value>
            <value>
                <fullName>Cliente_No_aceptó_cotización_definitiva</fullName>
                <label>Cliente No aceptó cotización definitiva</label>
            </value>
            <value>
                <fullName>Cliente_No_aceptó_cláusulas_del_contrato</fullName>
                <label>Cliente No aceptó cláusulas del contrato</label>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>