force-app/main/default/objects/Opportunity/fields/MPLossReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>MPLossReasonDetails__c</fullName>
    <label>Detalles de Motivo de Pérdida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>