force-app/main/default/objects/Opportunity/fields/MPMall__c.field-meta.xml
<CustomField>
    <fullName>MPMall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mall</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mall</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Mall)</relationshipLabel>
    <relationshipName>MPMallOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>