force-app/main/default/objects/Opportunity/fields/MPMassivelyGenerated__c.field-meta.xml
<CustomField>
    <fullName>MPMassivelyGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generada masivamente</label>
    <type>Checkbox</type>
</CustomField>