force-app/main/default/objects/Opportunity/fields/MPNegotiatedAdjustment__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca en true si cambia un ajuste negociado en las condiciones de presupuesto relacionadas al presupuesto sincronizado y si ese valor es diferente al Ajuste Sugerido.</description>
    <label>Ajuste Negociado</label>
    <type>Checkbox</type>
</CustomField>