force-app/main/default/objects/Opportunity/fields/MPNegotiatedValue__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automáticamente se marca cuando el calor negociado de las condiciones del presupuesto sincronizado es diferente al valor sugerido y el código de la clase de condición no inicia con AM.</description>
    <label>Valor Negociado</label>
    <type>Checkbox</type>
</CustomField>