force-app/main/default/objects/Opportunity/fields/MPNegotiatedWarranty__c.field-meta.xml
<CustomField>
    <fullName>MPNegotiatedWarranty__c</fullName>
    <label>Garantía Negociada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>