force-app/main/default/objects/Opportunity/fields/MPOpportunityURL__c.field-meta.xml
<CustomField>
    <fullName>MPOpportunityURL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))+ Id , &quot;Ver Oportunidad relacionada.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity URL</label>
    <type>Text</type>
</CustomField>