force-app/main/default/objects/Opportunity/fields/MPOtherContractObligations__c.field-meta.xml
<CustomField>
    <fullName>MPOtherContractObligations__c</fullName>
    <inlineHelpText>Otras obligaciones derivadas del contrato</inlineHelpText>
    <label>Otras Oblig. del Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Según la proporción que le corresponde en relación a la superficie cedida en uso, respecto del total de las obligaciones, más el 5% por concepto de administración</fullName>
            </value>
            <value>
                <fullName>Según lo previsto en la cláusula especial del Contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>