force-app/main/default/objects/Opportunity/fields/MPPaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentCondition__c</fullName>
    <label>Condición de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP47-Venc. 15 Dias (Perú) (Detración) (90_10%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>