force-app/main/default/objects/Opportunity/fields/MPProbableOpeningDate__c.field-meta.xml
<CustomField>
    <fullName>MPProbableOpeningDate__c</fullName>
    <label>Fecha probable de apertura</label>
    <type>Date</type>
</CustomField>