force-app/main/default/objects/Opportunity/fields/MPQuoteCondition__c.field-meta.xml
<CustomField>
    <fullName>MPQuoteCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condiciones de Prespuesto</label>
    <type>Checkbox</type>
</CustomField>