force-app/main/default/objects/Opportunity/fields/MPRentedAreaPlan__c.field-meta.xml
<CustomField>
    <fullName>MPRentedAreaPlan__c</fullName>
    <label>Plano de la Superficie Arrendada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>