force-app/main/default/objects/Opportunity/fields/MPRiskApprovalPeriod__c.field-meta.xml
<CustomField>
    <fullName>MPRiskApprovalPeriod__c</fullName>
    <description>Fecha limite de validez del área de Riesgo</description>
    <formula>MPDateOfApprovalOfRiskArea__c  +  VALUE($Label.MPValidityOfRiskAreaApproval)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo Aprobacion de Riesgos</label>
    <type>Date</type>
</CustomField>