force-app/main/default/objects/Opportunity/fields/MPRiskAreaApproval__c.field-meta.xml
<CustomField>
    <fullName>MPRiskAreaApproval__c</fullName>
    <label>Aprobación Area Riesgos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>