force-app/main/default/objects/Opportunity/fields/MPSecurityRequirementsManual__c.field-meta.xml
<CustomField>
    <fullName>MPSecurityRequirementsManual__c</fullName>
    <label>Manual Requerimientos de Seguridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>