force-app/main/default/objects/Opportunity/fields/MPSignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>MPSignatureStatus__c</fullName>
    <label>Estado Firmas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Firmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>