force-app/main/default/objects/Opportunity/fields/MPSpecialClause__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialClause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cláusula Especial?</label>
    <type>Checkbox</type>
</CustomField>