force-app/main/default/objects/Opportunity/fields/MPSpecialClauses2__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialClauses2__c</fullName>
    <label>Cláusula especial 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>