force-app/main/default/objects/Opportunity/fields/MPSpecialClauses3__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialClauses3__c</fullName>
    <label>Cláusula especial 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>