force-app/main/default/objects/Opportunity/fields/MPStartDateOfConstruction__c.field-meta.xml
<CustomField>
    <fullName>MPStartDateOfConstruction__c</fullName>
    <label>Fecha de inicio de obra</label>
    <type>Date</type>
</CustomField>