force-app/main/default/objects/Opportunity/fields/MPTermType__c.field-meta.xml
<CustomField>
    <fullName>MPTermType__c</fullName>
    <label>Tipo de Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meses</fullName>
            </value>
            <value>
                <fullName>Años</fullName>
                <default>true</default>
                <label>Años</label>
            </value>
            <value>
                <fullName>Días</fullName>
                <isActive>false</isActive>
                <label>Días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>