force-app/main/default/objects/Opportunity/fields/MPUpdateByGetContractIntegration__c.field-meta.xml
<CustomField>
    <fullName>MPUpdateByGetContractIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizada por Get Contract 4.1</label>
    <type>Checkbox</type>
</CustomField>