force-app/main/default/objects/Opportunity/fields/MPWarranty__c.field-meta.xml
<CustomField>
    <fullName>MPWarranty__c</fullName>
    <label>Garantía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>