force-app/main/default/objects/Opportunity/fields/MPWarrantyConstituted__c.field-meta.xml
<CustomField>
    <fullName>MPWarrantyConstituted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantia Constituida?</label>
    <type>Checkbox</type>
</CustomField>