force-app/main/default/objects/Opportunity/fields/MPWorkDescriptionByParty__c.field-meta.xml
<CustomField>
    <fullName>MPWorkDescriptionByParty__c</fullName>
    <inlineHelpText>Descripción trabajos a ejecutar por cada parte</inlineHelpText>
    <label>Descripción de Trabajos por Parte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annex</valueSetName>
    </valueSet>
</CustomField>