force-app/main/default/objects/Opportunity/recordTypes/MPEntry.recordType-meta.xml
<RecordType>
    <fullName>MPEntry</fullName>
    <active>true</active>
    <businessProcess>MPEntry</businessProcess>
    <description>Para ingreso de Ventas</description>
    <label>Ingreso</label>
</RecordType>