force-app/main/default/objects/Opportunity/recordTypes/MPRenovation.recordType-meta.xml
<RecordType>
    <fullName>MPRenovation</fullName>
    <active>true</active>
    <businessProcess>MPRenovation</businessProcess>
    <description>Proceso para oportunidades de renovación/modificación de contratos en Peru</description>
    <label>Renovación</label>
</RecordType>