force-app/main/default/objects/Opportunity/validationRules/VROPP_001_MPPreventSignatureAttached.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_001_MPPreventSignatureAttached</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
    ISPICKVAL(StageName, &quot;Preparación de Contratos&quot;),
    ISPICKVAL(StageName, &quot;Cerrado Ganado&quot;)
   ),
 OR(
    RecordType.DeveloperName = &quot;MPEntry&quot;,
    RecordType.DeveloperName = &quot;MPRenovation&quot;
   ),
 MPAttachedTechnicalSheet__c = FALSE,
 NOT(
   OR(
      $Profile.Name = &quot;System Administrator&quot;,
      $Profile.Name = &quot;Administrador del sistema&quot;
     )
  )
)</errorConditionFormula>
    <errorDisplayField>MPAttachedTechnicalSheet__c</errorDisplayField>
    <errorMessage>La oportunidad no puede pasar a &quot;	Preparación de Contratos&quot; mientras no tenga Ficha Técnica adjunta</errorMessage>
</ValidationRule>