force-app/main/default/objects/Opportunity/validationRules/VROPP_002_MPStageCreateOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_002_MPStageCreateOpp</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISNEW(),
NOT(ISPICKVAL (StageName, &apos;Exploración&apos;)),
RecordType.DeveloperName = &apos;MPEntry&apos;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Al momento de crear una Oportunidad solo puede seleccionar el estado en exploración(VROPP_002)</errorMessage>
</ValidationRule>