force-app/main/default/objects/Opportunity/validationRules/VROPP_003_MPClosedOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_003_MPClosedOpp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(PRIORVALUE(StageName), &quot;Cerrado Ganado&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;Cerrada Perdida&quot;)
  ),
  ISCHANGED(StageName),
		NOT(
    OR(
      $Profile.Name = &quot;System Administrator&quot;,
      $Profile.Name = &quot;Administrador del sistema&quot;
    )
  )
)</errorConditionFormula>
    <errorMessage>Una vez cerrada la Oportunidad no es posible cambiar su estado.  (VROPP_003)</errorMessage>
</ValidationRule>