force-app/main/default/objects/Opportunity/validationRules/VROPP_004_MPContractEffectiveDates.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_004_MPContractEffectiveDates</fullName>
    <active>true</active>
    <description>Regla de validación que impide avanzar manualmente a la etapa de &apos;Negociación&apos; sin que la oportunidad tenga diligenciadas las fechas de contrato.</description>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;MPEntry&apos;,
RecordType.DeveloperName = &apos;MPRenovation&apos;
),
NOT(ISNEW()),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
),
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Cotización&apos;),
OR(
ISBLANK(MPContractStartDate__c),
ISBLANK(TEXT(MPTermType__c)),
ISBLANK(MPContractPeriodYears__c),
ISBLANK(MPConstructionDaysOff__c)
)
)</errorConditionFormula>
    <errorMessage>Las fechas de contrato deben completarse antes de avanzar a la etapa de Negociación.  (VROPP_004)</errorMessage>
</ValidationRule>