force-app/main/default/objects/Opportunity/validationRules/VROPP_005_MPModificationLockedForUsers.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_005_MPModificationLockedForUsers</fullName>
    <active>false</active>
    <description>Los usuarios no deben poder modificar la oportunidad a la etapa Aprobación</description>
    <errorConditionFormula>AND
  (
				ISCHANGED(StageName), 
				ISPICKVAL(StageName, &quot;Aprobación&quot;),
				$Profile.Name = &quot;Usuario Estándar Perú&quot;
  )</errorConditionFormula>
    <errorMessage>No se puede modificar a esta etapa manualmente.</errorMessage>
</ValidationRule>