force-app/main/default/objects/Opportunity/validationRules/VROPP_007_MPMallOrBrandModification.validationRule-meta.xml
<ValidationRule>
    <fullName>VROPP_007_MPMallOrBrandModification</fullName>
    <active>true</active>
    <description>Regla de validación que impide modificar tanto el Mall como la Marca asociados a las oportunidades.</description>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;MPEntry&apos;,
RecordType.DeveloperName = &apos;MPRenovation&apos;
),
NOT(ISNEW()),
OR(
ISCHANGED(MPMall__c), 
ISCHANGED(MPBrand__c)
),
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Administrador del sistema&quot;
)
)
)</errorConditionFormula>
    <errorMessage>No es posible modificar el Mall y la Marca asociados a esta oportunidad. (VROPP_007)</errorMessage>
</ValidationRule>